# ndarray

./: Cargo.toml
named/: Cargo.toml
named/src/: lib.rs
ndarray-rand/: Cargo.toml
serialization-tests/tests/: serialize.rs
tests/: blas.rs  serialize.rs
